--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VUE_APP_API_BASE_URL = http://127.0.0.1:8000/api/
+#VUE_APP_API_BASE_URL = http://127.0.0.1:8000/api/
 #VUE_APP_API_BASE_URL = http://calculator-amadeus.1gb.ru:8000/api/
+VUE_APP_API_BASE_URL = http://192.168.1.61:8000/api/
